# BattleCity-Tanks1990

BattleCity-Tanks1990-APfinal/: Bullet.cpp  Bullet.h  CMakeLists.txt  Game.cpp  Game.h  Health.cpp  Health.h  MEMO.txt  Mapcreator.cpp  Mapcreator.h  Menu.cpp  Menu.h  MyRect.cpp  MyRect.h  Player.cpp  Player.h  Score.cpp  Score.h  Target.cpp  Target.h  Wall.cpp  gamemenu.cpp  gamemenu.h  main.cpp  mainscene.cpp  mainscene.h  mainwindow.cpp  mainwindow.h  res.qrc  tank.cpp  tank.h
build-BattleCity-Tanks1990-APfinal-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-BattleCity-Tanks1990-APfinal-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-b0791b553b4d9a59812b.json  (+19 more)
build-BattleCity-Tanks1990-APfinal-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-ca6eabce4138d97fca1d.json  cmakeFiles-v1-d16e1d4bde96727a7faf.json  codemodel-v2-1e655f46f4a6061afa99.json  codemodel-v2-2324b11a2d34ff1d261b.json  codemodel-v2-74e8d3623ccf7b493e87.json  codemodel-v2-cf4b731054e0087cd8f0.json  directory-.-Debug-66e6e92200429ac3a61f.json  directory-.-Debug-8ee0e9cc12e72825a7ed.json  directory-.-Debug-e19a6bda9c444dfeda85.json  index-2023-07-09T21-41-32-0278.json  index-2023-07-10T13-17-54-0294.json  index-2023-07-12T00-34-40-0883.json  index-2023-07-13T08-59-28-0884.json  target-BattleCity-Tanks1990-APfinal-Debug-025dd4a62ce0ebc08154.json  target-BattleCity-Tanks1990-APfinal-Debug-0a29210c7902fb499b65.json  target-BattleCity-Tanks1990-APfinal-Debug-8c81dcb8d39430642fed.json  target-BattleCity-Tanks1990-APfinal_autogen_timestamp_deps-Debug-22678597ea1a01db51a2.json
build-BattleCity-Tanks1990-APfinal-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-BattleCity-Tanks1990-APfinal-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-BattleCity-Tanks1990-APfinal-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/BattleCity-Tanks1990-APfinal_autogen/: deps  mocs_compilation.cpp
build-BattleCity-Tanks1990-APfinal-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/BattleCity-Tanks1990-APfinal_autogen/EWIEGA46WW/: moc_Bullet.cpp  moc_Bullet.cpp.d  moc_Game.cpp  moc_Game.cpp.d  moc_Menu.cpp  moc_Menu.cpp.d  moc_Player.cpp  moc_Player.cpp.d  moc_Score.cpp  moc_Score.cpp.d  moc_Target.cpp  moc_Target.cpp.d  moc_gamemenu.cpp  moc_gamemenu.cpp.d  moc_mainscene.cpp  moc_mainscene.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_tank.cpp  moc_tank.cpp.d
(+719 files in other folders)
